--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
-.App {
-   text-align: center;
+
+video{
+   position: fixed;
+   z-index: -1;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100vh;
+   object-fit: cover;
+   opacity: .2;
+}
+
+iframe{
+   display: none;
 }
