--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Shadows Into Light', cursive;
+font-family: 'Space Mono', monospace;
+color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: rgb(0, 0, 0);
+}
+
+h1{
+  margin: 1em;
+  text-align: center;
+  font-size: 4em;
+  text-shadow: 5px 5px 5px rgba(0, 0, 0, 1);
+}
+
+h6{
+  font-size: 1.5em;
+}
+
+span{
+  font-size: 1.1em;
 }
