--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,5 @@ video{
    width: 100%;
    height: 100vh;
    object-fit: cover;
-   opacity: .2;
-}
-
-iframe{
-   display: none;
+   opacity: 1;
 }
