--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ color: white;
 }
 
 body{
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 1);
 }
 
 h1{
@@ -19,8 +19,10 @@ h1{
 
 h6{
   font-size: 1.5em;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
 }
 
 span{
   font-size: 1.1em;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
 }
