--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,12 @@ color: white;
 }
 
 body{
-  background-color: rgba(0, 0, 0, 1);
+  
+    background-image:url('./assets/img/Background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+ 
 }
 
 h1{
