--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ color: white;
 }
 
 body{
-  
+    background-color: black;
     background-image:url('./assets/img/Background.png');
     background-size: cover;
     background-repeat: no-repeat;
