--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 #logo{
     display: block;
-    margin: 2em auto;
+    width: 14em;
+    
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
