--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body{
     background-color: black;
     background-image:url('./assets/img/Background.png');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-position: center;
     background-attachment: fixed;
  
 }
