--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,14 @@
   padding: 0;
   font-family: 'Shadows Into Light', cursive;
 font-family: 'Space Mono', monospace;
-color: white;
+color: black;
 }
 
 body{
-    background-color: black;
-    background-image:url('./assets/img/Background.png');
-    background-size: cover;
+    background-color: white;
+    background-image:url('./assets/img/Background2.jpg');
+    background-size: auto;
+    background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
  
@@ -19,15 +20,12 @@ h1{
   margin: 1em;
   text-align: center;
   font-size: 4em;
-  text-shadow: 5px 5px 5px rgba(0, 0, 0, 1);
 }
 
 h6{
   font-size: 1.5em;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
 }
 
 span{
   font-size: 1.1em;
-  text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
 }
